[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "termin-build-tools"
version = "0.1.0"
description = "Common build utilities for termin SDK Python packages"
requires-python = ">=3.8"
dependencies = ["setuptools"]

[tool.setuptools.packages.find]
where = ["."]
